fix alignment of quiz layout page

--- a/style/elegance.css
+++ b/style/elegance.css
@@ -2911,15 +2911,6 @@ table#categoryquestions {
     overflow: hidden;
 }
 
-/* to reposition question bank */
-#page-mod-quiz-edit div.quizcontents {
-	width: 100%;
-}
-
-.questionbankwindow.block {
- 	width: 100%;
-}
-
 #page-mod-quiz-edit .modulespecificbuttonscontainer {
     width: 400px;
 }
